BUGFIX - fixing overlap of nav links with main app start button (#92)
Nav links were overlapping with the start submission button on iOS due to issues with how Safari on iOS calculates vh units

--- a/bikespace_dashboard/css/components/page.css
+++ b/bikespace_dashboard/css/components/page.css
@@ -46,6 +46,7 @@ header {
                     vertical-align: middle;
                     text-decoration: none;
                     padding: 0.2rem 0.4rem;
+                    color: var(--color-secondary-dark-grey);
 
                     &:visited {
                         color: var(--color-secondary-dark-grey);
